# cltk

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
RayTracing/: CMakeLists.txt  README.md  bmp_fmt.h  ray.h  vec3.h
RayTracing/InOneWeekend/: CMakeLists.txt  anti_aliasing.cl  anti_aliasing.cpp  bmp.cl  bmp.cpp  camera.cl  camera.cpp  camera2.cl  camera2.cpp  dielectric.cl  dielectric.cpp  diffuse.cl  diffuse.cpp  final.cl  final.cpp  hittable_list.cl  hittable_list.cpp  material.cl  material.cpp  material.h  normalsphere.cl  normalsphere.cpp  ray.cl  ray.cpp  redsphere.cl  redsphere.cpp  vec3.cl  vec3.cpp
example/: CMakeLists.txt  cltk_test.c  test.cl
example_cpp/: CMakeLists.txt  cltkpp_test.cpp  test.cl
example_image/: CMakeLists.txt  cltk_image_test.c  image_test.cl
gemm_cl/: CMakeLists.txt  gemm.c  gemm.cl
include/: cltk.h  cltkpp.h
src/: cltk.c  cltk_internal.h
